# trace-zero

./: .env.example  .gitignore  LICENSE  OptimalPath(withoutMarketMovements).py  README.md  pyproject.toml
backend/: main.py
backend/api/: routes.py  ws.py
backend/engine/: book.py  exchange.py  order.py
backend/market_replay/: collector.py  loader.py  logger.py  normalizer.py  replay.py
backend/models/: almgren_chriss.py
backend/simulation/: config.py  results.py  runner.py
backend/strategies/: ac_optimal.py  base.py  dump.py  twap.py  vwap.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: CostChart.tsx  OrderBlotter.tsx  Panel.tsx  PriceChart.tsx  SimulationForm.tsx  TearSheet.tsx  Terminal.tsx  TopBar.tsx  TrajectoryChart.tsx
frontend/src/hooks/: useSimulation.ts
scripts/: capture_data.py
